--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -4,9 +4,9 @@ title: "sendAnalyticsEvent"
 
 The `sendAnalyticsEvent` function triggers events in the browser, following the [Google Analytics 4 (GA4) data model](https://developers.google.com/analytics/devguides/collection/ga4/reference/events). This function is primarily used for ecommerce tracking but also supports custom events, serving as a centralized point for managing events.
 
-The `sendAnalyticsEvent` function centralizes and aggregates tracking events, and it also supports [custom events](https://developers.vtex.com/docs/guides/faststore/analytics-sending-custom-events).
+The `sendAnalyticsEvent` function centralizes and aggregates tracking events, and also supports [custom events](https://developers.vtex.com/docs/guides/faststore/analytics-sending-custom-events).
 
-> ⚠️ `sendAnalyticsEvent` doesn't send events to any analytics provider. To intercept events triggered by this function, use the [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) hook.
+> ⚠️ `sendAnalyticsEvent` does not send events to any analytics provider. To intercept events triggered by this function, use the [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) hook.
 
 ## Import
 
@@ -16,9 +16,9 @@ import { sendAnalyticsEvent } from '@faststore/sdk'
 
 ## Usage
 
-In the component related to the event, declare a callback function. In this function, define an event object with the desired event type (example: `add_to_cart`) and call `sendAnalyticsEvent`. Then, pass the related event as an argument. Finally, call the callback function in the event trigger (example: `onClick`).
+In the component related to the event, declare a callback function. In this function, define an event object with the desired event type (example: `add_to_cart`) and call `sendAnalyticsEvent`. Then, pass the event object as an argument. Finally, call the callback function in the event trigger (example: `onClick`).
 
-Consider the following example of an `add_to_cart` event triggered by the `button` component:
+Consider the following example of an `add_to_cart` event triggered by a `button` component:
 
 ```tsx
 import { useCallback } from 'react'
