--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -2,7 +2,7 @@
 title: "sendAnalyticsEvent"
 ---
 
-The `sendAnalyticsEvent` function triggers events in the browser, following the [Google Analytics 4 (GA4) data model](https://developers.google.com/analytics/devguides/collection/ga4/reference/events). This function is primarily used for ecommerce tracking but also supports custom events, and serves as a centralized point for event management.
+The `sendAnalyticsEvent` function triggers events in the browser, following the [Google Analytics 4 (GA4) data model](https://developers.google.com/analytics/devguides/collection/ga4/reference/events). This function is primarily used for ecommerce tracking but also supports custom events and serves as a centralized point for event management.
 
 The `sendAnalyticsEvent` function centralizes and aggregates tracking events and also supports [custom events](https://developers.vtex.com/docs/guides/faststore/analytics-sending-custom-events).
 
@@ -16,7 +16,7 @@ import { sendAnalyticsEvent } from '@faststore/sdk'
 
 ## Usage
 
-In the component where the event will be triggered, declare a callback function. In this function, define an event object with the desired event type (example: `add_to_cart`) and call `sendAnalyticsEvent`. Then, pass the event object as an argument. Finally, call the callback function to the event trigger (example: `onClick`).
+In the component where the event will be triggered, declare a callback function. In this function, define an event object with the desired event type (example: `add_to_cart`) and call `sendAnalyticsEvent`. Then, pass the event object as an argument. Finally, call the callback function on the event trigger (example: `onClick`).
 
 Consider the following example of an `add_to_cart` event triggered by a `button` component:
 
