Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -16,7 +16,7 @@ import { sendAnalyticsEvent } from '@faststore/sdk'
 
 ## Usage
 
-In the component where the event will be triggered, declare a callback function. In this function, define an event object with the desired event type (example: `add_to_cart`) and call `sendAnalyticsEvent`. Then, pass the event object as an argument. Finally, call the callback function on the event trigger (example: `onClick`).
+In the component where the event will be triggered, declare a callback function. In this function, define an event object with the desired event type (e.g., `add_to_cart`) and call `sendAnalyticsEvent`. Then, pass the event object as an argument. Finally, call the callback function on the event trigger (e.g., `onClick`).
 
 Consider the following example of an `add_to_cart` event triggered by a `button` component:
 
