Apply suggestions from grammar review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/guides/vtex-io/GraphQL/developing-a-graphql-api-in-service-apps.mdx
+++ b/docs/guides/vtex-io/GraphQL/developing-a-graphql-api-in-service-apps.mdx
@@ -154,7 +154,7 @@ To access routes and resources not available through the native clients, you nee
 Resolvers are the functions that are executed when a GraphQL endpoint is called. A resolver function must have the same name as its corresponding endpoint. Follow the steps below to define your resolvers:
 
 1. In the `node` folder, create another folder called `resolvers`.
-2. In the new folder, add the TypeScript files that will have resolver code. We recommend creating a `.ts` file for each resolver.
+2. In the new folder, add the TypeScript files that will contain resolver code. We recommend creating a `.ts` file for each resolver.
 3. In the created files, add the resolver code. The following example shows a resolver that you can use as reference:
 
 ```ts node/resolvers/products.ts
@@ -233,7 +233,7 @@ With your app running, you can test the implemented endpoints by making requests
     }
     ```
 
-6. Run the query by clicking the `Play` ▶️ button in the top left corner. You should see the result of your query on the right side of the window. Here is an example:
+6. Run the query by clicking the `Play` ▶️ button in the top-left corner. You should see the result of your query on the right side of the window. Here is an example:
 
     ```json
     {
