Storefront features overview: add descriptions

--- a/docs/faststore/components/storefront-features/overview.mdx
+++ b/docs/faststore/components/storefront-features/overview.mdx
@@ -11,7 +11,7 @@ Storefront features are solutions that help you implement ecommerce functionalit
 
   <WhatsNextCard
   title="Adding third-party scripts"
-  description=""
+  description="Learn how to safely add and manage third-party scripts, such as analytics, ads, or widgets, in your FastStore project."
   linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-handling-third-party-scripts"
   linkTitle="See more"
   />
@@ -25,7 +25,7 @@ Storefront features are solutions that help you implement ecommerce functionalit
 
   <WhatsNextCard
   title="Displaying content for authenticated users"
-  description=""
+  description="Show exclusive content to logged-in users, such as special offers, prices, or product details, to create a personalized shopping experience."
   linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-displaying-content-for-authenticated-users"
   linkTitle="See more"
   />
@@ -46,7 +46,7 @@ Storefront features are solutions that help you implement ecommerce functionalit
 
   <WhatsNextCard
   title="Managing product images in specific contexts"
-  description=""
+  description="Control which product images appear in different store sections by labeling them with specific contexts in VTEX Catalog."
   linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-managing-product-images-in-specific-contexts"
   linkTitle="See more"
   />
