Review Styling section

--- a/docs/faststore/docs/styling/overview.mdx
+++ b/docs/faststore/docs/styling/overview.mdx
@@ -3,9 +3,7 @@ title: "Styling"
 excerpt: "Learn how to style and customize your FastStore storefront."
 ---
 
-The **Styling** section provides guides and best practices for customizing the look and feel of your FastStore storefront. Whether you want to apply a custom theme, adjust component styles, or leverage advanced CSS techniques, this category will help you in creating a brand-consistent ecommerce experience.
-
-## Guides in this section
+The Styling section provides guides and best practices for customizing the look and feel of your FastStore storefront. Whether you want to apply a custom theme, adjust component styles, or leverage advanced CSS techniques, this category will help you in creating a brand-consistent ecommerce experience.
 
 <Flex>
   <WhatsNextCard
