--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -3,11 +3,11 @@ title: "Delivery Promise"
 updatedAt: "2025-08-06T23:24:54.978Z"
 ---
 
->ℹ This feature is in closed beta, meaning only selected customers can access it. If you’re interested in implementing it in the future, please contact our [Support](https://support.vtex.com/hc/en-us) team.
+>ℹ This feature is in closed beta, meaning only selected customers can access it. If you’re interested in implementing it, please contact our [Support](https://support.vtex.com/hc/en-us) team.
 
 In this guide, you’ll learn how to configure Delivery Promise in your FastStore project.
 
-**Delivery Promise** is a feature that provides accurate and reliable delivery estimations for available products based on the customer's location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at a nearby location.
+**Delivery Promise** is a feature that provides accurate and reliable delivery estimates for available products based on the customer's location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at a nearby location.
 
 This solution continuously updates product availability throughout the buying journey by responding to changes in catalog, pricing, inventory, or shipping settings. These updates are then sent to [Checkout](https://developers.vtex.com/docs/guides/checkout-overview) and [Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), ensuring customers see up-to-date options based on their region.
 
@@ -15,16 +15,16 @@ This solution continuously updates product availability throughout the buying jo
 
 This feature introduces the following hooks as part of the regionalization and location workflow:
 
-* `useGeoLocation`: Uses the browser’s geolocation API or other client-side methods to auto-detect the user's location when not provided.
+* `useGeoLocation`: Uses the browser's geolocation API or other client-side methods to auto-detect the user's location when not provided.
 * `useRegion`: Accesses or updates the user's region information, such as postal code or location, and manages region validation flows.
 * `useRegionModal`: Handles modal display logic for region selection, especially when the location input is mandatory.
 * `useDeliveryPromise`: Centralizes all logic for querying, displaying, and updating delivery-availability filters and states.
 
 ## Filter options
 
-With Delivery Promise, shoppers can filter the available products by using a [global filter](#global-filter), which affects all navigation, or it can be directly in a [Product List Page (PLP) or search page](#plp-or-search-page-filters), affecting only the current page they’re navigating. In both scenarios, they can filter by shipping method or pickup points.
+With Delivery Promise, shoppers can filter available products by using a [global filter](#global-filter), which affects all navigation, or directly on a [Product List Page (PLP) or search page](#plp-or-search-page-filters), affecting only the current page they're navigating. In both scenarios, they can filter by shipping method or pickup points.
 
-For pickup points selected in the global filter or a specific pickup point, the system displays all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
+>ℹ Learn more about filters usage and user flows in the [Delivery Promise Figma Community](https://www.figma.com/community/file/1514671929470875586) page.
 
 ### Global filters
 
@@ -36,7 +36,7 @@ Shoppers can filter available products globally **by shipping** or **by store**.
 
 ![filter-by-shipping](https://vtexhelp.vtexassets.com/assets/docs/src/filter-by-shipping___040d93770d3280239260a2a02b8e3b67.png)
 
-* **Filter by store:** Allows shoppers to filter products to display only those available for pickup at a specific store.
+* **Filter by store:** Allows shoppers to filter products to display only those available for pickup at a specific store. It shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
 
 ![filter-by-store](https://vtexhelp.vtexassets.com/assets/docs/src/filter-by-store___8a78ad88234e979848d10b7da6ec49cc.png)
 
@@ -45,7 +45,7 @@ Shoppers can filter available products globally **by shipping** or **by store**.
 In PLPs or search pages, the shopper may have the following options to filter:
 
 * **Deliver:** Displays available products according to the shopper's location.
-* **Pickup at:** Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper may click it and select a new store in the modal that will open.               
+* **Pickup at:** Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper may click it and select a new store in the modal that will open. It shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
 * **Pickup nearby:** Displays products available for pickup at nearby stores. It shows up to 40 pickup points within 10 km of the shopper’s location.
 * **Pickup anywhere:** Displays products available for pickup at any participating store within the merchant’s network, rather than restricting results to a selected pickup location or geographic proximity. **It's mainly used by B2B stores**.
 
@@ -73,7 +73,7 @@ deliveryPromise: {
 
 ### Get the `search-session` app
 
-Check if you have installed the `0.5.0` or a later version of the [`search-session`](https://developers.vtex.com/docs/apps/vtex.search-session) app.
+Check if you have installed the `0.5.0` or later version of the [`search-session`](https://developers.vtex.com/docs/apps/vtex.search-session) app.
 
 1. In your terminal, run the `vtex list` command.
 2. In the retrieved results, search for the app.
@@ -83,7 +83,7 @@ Check if you have installed the `0.5.0` or a later version of the [`search-sessi
 
 To enable the Intelligent Search app, check the version of your [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app) account.
 
-In your terminal, log in to your account by running `vtex login {accountName}` and run `vtex edition get` to see the Edition app version installed. *Remember to replace the values between curly braces with your account name*.
+In your terminal, log in to your account by running `vtex login {accountName}`, then `vtex edition get` to see the Edition app version installed. *Replace the values between curly brackets with your account name*.
 
 <details>
 <summary>Accounts in the `vtex.edition-store@5.x`</summary>
@@ -97,7 +97,7 @@ To integrate the VTEX Intelligent Search, access **Store Settings > Intelligent 
 <details>
 <summary>Accounts using an edition version below `5.x`</summary>
 
-1. In the VTEX IO CLI, log in to your VTEX account by running `vtex login {accountName}`. *Remember to replace the values between curly braces with your account name.*
+1. In the VTEX IO CLI, log in to your VTEX account by running `vtex login {accountName}`. *Replace the values between curly brackets with your account name.*
 2. If the VTEX Intelligent Search app isn't installed in your account, run the following:
 
     ```bash
@@ -121,7 +121,7 @@ Run the `yarn upgrade @faststore/cli` command to update the `@faststore/cli` pac
 
   ### Open a ticket with VTEX Support
 
-Open a ticket with [VTEX Support](https://help.vtex.com/en/support) and request the activation of Delivery Promise in your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) and request that Delivery Promise be activated in your account.
 
 </Steps>
 
@@ -144,7 +144,7 @@ Open a ticket with [VTEX Support](https://help.vtex.com/en/support) and request 
 
 Run the `faststore cms-sync` command to sync the `cms` folder of your FastStore project with the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview).
 
-The expected response is that you receive the message `CMS synced successfully...`. The native regionalization components and sections will be automatically updated. You can check them in the VTEX Admin:
+The expected response is the message `CMS synced successfully...`. The native regionalization components and sections will be automatically updated. You can check them in the VTEX Admin:
 
 * **Regionalization component:** Go to *Storefronts > Headless CMS > Global Sections > NavBar > Navigation > Regionalization*.
 
@@ -383,13 +383,13 @@ To set a default postal code for your store, follow the steps below:
 
 To provide accurate Delivery Promise estimates, FastStore projects determine user location based on the following priority:
 
-1. **Logged in user’s address:** If the user is logged in and has a saved address, this information is used.
-2. **User-provided location:** If the user is logged in but doesn’t have a saved address, or isn’t logged in but provided their location, like a postal code, this data is used.
-3. **Default postal code:** If the user hasn't provided a location, isn’t logged in, or has no saved address, we check if the merchant has configured a default postal code for all buyers. Learn to do so in [Defining a default postal code](#step-4-optional-defining-a-default-postal-code).
+1. **Logged in user's address:** If the user is logged in and has a saved address, this information is used.
+2. **User-provided location:** If the user is logged in but doesn't have a saved address, or isn’t logged in but provided their location, like a postal code, this data is used.
+3. **Default postal code:** If the user hasn't provided a location, isn't logged in, or has no saved address, we check if the merchant has configured a default postal code for all buyers. Learn to do so in [Defining a default postal code](#step-4-optional-defining-a-default-postal-code).
 4. **No postal code (not required):** If no postal code is provided and not required, products are displayed without using Delivery Promise.
 5. **No postal code (required)**: If no postal code is provided when required, a modal is displayed that the buyer can't close until a postal code is entered. To make the postal code required, open your `discovery.config.js` file and change the `mandatory` field in the `deliveryPromise` object to `true`, as shown in the [Default settings](#default-settings) section.
 
-To better understand how this flow works, see the following diagram.
+To better understand how this flow works, see the following diagram:
 
 ```mermaid
 graph LR
