--- a/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
+++ b/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
@@ -62,7 +62,7 @@ FastStore allows you to configure redirects through the [`discovery.config.js`](
 
 For projects requiring more than 1024 redirects, you can enable the `enableRedirects` flag in the `discovery.config.js` file. This flag lets you manage redirects through [redirects](https://help.vtex.com/tutorial/managing-url-redirects) in the VTEX Admin.
 
-> ⚠️ This workflow, which uses both a code configuration and the [redirects](https://help.vtex.com/tutorial/managing-url-redirects) interface.
+> ⚠️ This workflow, which uses both a code configuration and the [redirects](https://help.vtex.com/tutorial/managing-url-redirects) interface, is currently experimental.
 
 1. Update your FastStore project to version `3.2.0` or higher. To do this, open your project in a code editor.
 
