--- a/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
+++ b/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
@@ -19,7 +19,7 @@ These two tools enhance content organization, help maintain a good user experien
 
 FastStore allows you to configure redirects through the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file. This configuration is based on [Next.js redirects](https://nextjs.org/docs/pages/api-reference/next-config-js/redirects).
 
-> ⚠️ Projects hosted on Vercel have redirect limits such as, "Number of redirects in the array: 1,024 maximum" and "String length for `source` and `destination` parameters: 4.096 maximum." For more information, check the Vercel [Redirects](https://vercel.com/docs/edge-network/redirects#configuration) article.
+> ⚠️ Projects hosted on Vercel have redirect limits such as "Number of redirects in the array: 1,024 maximum" and "String length for `source` and `destination` parameters: 4,096 maximum." For more information, check the Vercel [Redirects](https://vercel.com/docs/edge-network/redirects#configuration) article.
 
 1. Open your FastStore project in your preferred code editor and go to the `discovery.config.js` file within your project directory.
 2. Inside the `discovery.config.js`, add the `redirects`  function. This function will define your redirect rules, for example:
@@ -33,7 +33,7 @@ FastStore allows you to configure redirects through the [`discovery.config.js`](
     },
     ```
 
-    > ℹ️ The `redirects` function requires the `required.json` file, which you will create in the next step. This file contains the redirect definitions.
+    > ℹ️ The `redirects` function requires the `redirects.json` file, which you will create in the next step. This file contains the redirect definitions.
 
 3. Go to the `src` folder and create the `redirects.json` file. In the `redirects.json` file, add the following:
 
@@ -60,7 +60,7 @@ FastStore allows you to configure redirects through the [`discovery.config.js`](
 
 ## (Experimental) Enabling redirects using the `enableRedirects` flag
 
-For projects requiring more than 1024 redirects, you can enable the `enableRedirects` flag in the `discovery.config.js` file. This flag lets you manage redirects through [redirects](https://help.vtex.com/tutorial/managing-url-redirects) in the VTEX Admin.
+For projects requiring more than 1,024 redirects, you can enable the `enableRedirects` flag in the `discovery.config.js` file. This flag lets you manage redirects through [redirects](https://help.vtex.com/tutorial/managing-url-redirects) in the VTEX Admin.
 
 > ⚠️ This workflow, which uses both a code configuration and the [redirects](https://help.vtex.com/tutorial/managing-url-redirects) interface, is currently experimental.
 
@@ -89,9 +89,9 @@ For projects requiring more than 1024 redirects, you can enable the `enableRedir
 5. Create a new branch and open a pull request to deploy the changes made in the `discovery.config.js` file to production.
 
 Once the change is live, you can manage the store’s redirects in VTEX Admin by following the instructions in [Managing URL redirects](https://help.vtex.com/tutorial/managing-url-redirects--3UJuFrU8imSVWg134mkvJV).
- 
+
 ## Creating rewrites
 
 FastStore leverages [Next.js rewrites](https://nextjs.org/docs/pages/api-reference/next-config-js/rewrites) to create custom routes while using existing Product Listing Page (PLP) templates. This allows you to map specific URLs to templates defined in Headless CMS, providing flexibility in content organization and URL structure.
 
-For more information on using rewrites with PLP templates, check the [Using rewrites with PLP template](https://developers.vtex.com/docs/guides/faststore/headless-cms-multiple-page-template#product-listing-page-plp-template-selection-criteria) section on the Multiple page templates documentation.
+For more information on using rewrites with PLP templates, check the [Using rewrites with PLP template](https://developers.vtex.com/docs/guides/faststore/headless-cms-multiple-page-template#product-listing-page-plp-template-selection-criteria) section in the Multiple page templates documentation.
