Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
+++ b/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
@@ -35,7 +35,7 @@ FastStore allows you to configure redirects through the [`discovery.config.js`](
 
     > ℹ️ The `redirects` function requires the `redirects.json` file, which you will create in the next step. This file contains the redirect definitions.
 
-3. Go to the `src` folder and create the `redirects.json` file and add the following:
+3. Go to the `src` folder, create the `redirects.json` file, and add the following:
 
     ```src/redirects.json
     [
