update(delivery-promise.mdx): applying technical review

--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -22,7 +22,7 @@ This feature introduces the following hooks as part of the regionalization and l
 
 ## Filter options
 
-With Delivery Promise, shoppers can filter available products by using a [global filter](#global-filter), which affects all navigation, or directly on a [Product List Page (PLP) or search page](#plp-or-search-page-filters), affecting only the current page they're navigating. In both scenarios, they can filter by shipping method or pickup points.
+With Delivery Promise, shoppers can filter available products by using a [global filter](#global-filter), which affects all navigation, or a local filter directly on a [Product List Page (PLP) or search page](#plp-or-search-page-filters), affecting only the current page they're navigating.
 
 >ℹ Learn more about filters usage and user flows in the [Delivery Promise Figma Community](https://www.figma.com/community/file/1514671929470875586) page.
 
