--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -14,7 +14,7 @@ In this guide, learn how to implement the refresh token workflow in a FastStore 
 
 ### Update your FastStore project
 
-Make sure you project is updated to the latest version, to do this follow these steps:
+Make sure your project is updated to the latest version. To do so, follow these steps:
 
 1. Open your project in a code editor.
 2. Open a terminal and run the following command to update the FastStore packages to the latest version:
@@ -25,7 +25,7 @@ Make sure you project is updated to the latest version, to do this follow these 
 
 ### Request the refresh token activation
 
-Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time, like 7 days. Include the account(s) name(s) to enable the feature in your request. Without the activation, you won’t be able to enable the refresh token in your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time, like 7 days. Include the account name(s) to enable the feature in your request. Without the activation, you won’t be able to enable the refresh token in your account.
 
 </Steps>
 
