--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -25,7 +25,7 @@ yarn upgrade -L --scope @faststore
 
 ### Request the refresh token activation
 
-Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time, like 7 days. Include the account name(s) to enable the feature in your request. Without the activation, you won’t be able to enable the refresh token in your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time, such as 7 days. Include the account name(s) to enable the feature in your request. Without the activation, you won’t be able to enable the refresh token in your account.
 
 </Steps>
 
