Apply suggestions from code review

--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -6,7 +6,7 @@ title: "Implementing refresh token"
 
 In this guide, learn how to implement the refresh token workflow in a FastStore store.
 
-> ℹ️ For more information on how the refresh token flow works, refer to the Refresh token flow for headless implementation guide.
+> ℹ️ For more information on how the refresh token flow works, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
 
 ## Before you begin
 
