Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -32,7 +32,7 @@ Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request t
 ## Instructions
 
 1. Open your FastStore project in a code editor.
-2. Go to `discovery.config.js` file,  in the `experimental` section, add the `refreshToken` flag with the value `true`:
+2. Go to the `discovery.config.js` file, in the `experimental` section, add the `refreshToken` flag with the value `true`:
 
 
     ```js discovery.config.js
